--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container bg-dark">
         <div class="row">
             <div class="col-md-6 offset-md-3">
-                <h1 class="display-4 text-center my-3 text-white">Weight converter</h1>
+                <h1 class="display-4 text-center my-3 text-white">Weight Converter Online</h1>
                 <div class="dropdown mb-3">
                     <button class="btn btn-warning dropdown-toggle" type="button" id="dropdownMenuButton"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
