--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                         Units
                     </button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <a class="dropdown-item" href="kg.html">Kilograms</a>
-                        <a class="dropdown-item" href="gm.html">Grams</a>
-                        <a class="dropdown-item" href="oz.html">Ounces</a>
+                        <a class="dropdown-item" href="Kg.html">Kilograms</a>
+                        <a class="dropdown-item" href="gram.html">Grams</a>
+                        <a class="dropdown-item" href="Ounce.html">Ounces</a>
                         <a class="dropdown-item" href="index.html">Pounds</a>
                     </div>
                 </div>
